[package]
version = "0.1.0"
name = "seed-runtime-errors"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Tor Hovland <tor.hovland@bekk.no>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
leaflet = "0.2.1"
seed = "0.8.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
